# SDL2-Android-Build-with-cmake

./: CMakeLists.txt  README.md
